--- a/1sprint/cisco_usage.tex
+++ b/1sprint/cisco_usage.tex
@@ -1,7 +1,7 @@
 \section{Using Cisco}\label{sec:cisco_usage}
 The Cisco localisation and positioning system is already in use at Aalborg University. To be able to use the information from the system, we had a meeting with the MSE administrator, during which he raised concerns for privacy, because of the legality of storing person sensitive data, as mentioned in \cref{sec:permission}. 
 
-Furthermore the MSE administrator wishes to be able to provide the location data to future student projects with ease. To accommodate this, it has been asked of us to build and deploy an intermediate service with the goal of obfuscating sensitive personal data, such as MAC-addresses and user names. This service is intended to duplicate the functionality of the Cisco MSE RESTful API, such that our service acts as a transparent proxy. This is achieved by creating an intermediate RESTful service, that simply redirects requests and processes the response before sending it back to the initial requester, as illustrated on \cref{fig:cisco_usage}.
+Furthermore the MSE administrator wishes to be able to provide the location data to future student projects with ease. To accommodate this, it has been asked of us to build and deploy an intermediate service with the goal of obfuscating sensitive personal data, such as MAC-addresses and user names. This service is intended to duplicate the functionality of the Cisco MSE RESTful API, such that it acts as a transparent proxy. This is achieved by creating an intermediate RESTful service, that simply redirects requests and processes the response before sending it back to the initial requester, as illustrated on \cref{fig:cisco_usage}.
 
 \begin{figure}[ht]
 	\begin{center}
@@ -47,4 +47,4 @@ Private static Client ObfuscateMacAddress(Client singleClient) {
 \end{lstlisting}
 
 \subsection{System hierarchy}\label{subsec:system_hierarchy}
-With this code it is possible to create an intermediate service for the Cisco MSE RESTful service, that intercepts the response and obfuscates certain information. To use this service, a client needs to know the IP address and a login for the intermediate service. To automate the requests and create a flow of data from the Cisco systems to the aStep database, we will have to build and implement a client that fetches data at an interval. The scope of the project is beyond Aalborg University, and as such the project will need to support more then a single Cisco MSE system. A model can be seen in Future Work chapter \ref{Cha:Future_Work}. 
+With this code it is possible to create an intermediate service for the Cisco MSE RESTful service, that intercepts the response and obfuscates certain information. To use this service, a client needs to know the IP address and a login for the intermediate service. To automate the requests and create a flow of data from the MSE systems to the aSTEP database, we will have to build and implement a client that fetches data at an interval. The scope of the project is beyond Aalborg University, and as such the project will need to support more then a single MSE system. A model can be seen in Future Work chapter \ref{Cha:Future_Work}.\sfx{move to appendix} \sfx{kig igen simon}
