--- a/2sprint/client.tex
+++ b/2sprint/client.tex
@@ -1,12 +1,12 @@
 \section{Fetching Data From Cisco} \label{sec:fetch_data}
-This section aims to build a client that is capable of communicating with several MSE services and the Database server. As mentioned previously in \Cref{subsec:system_hierarchy}, it is expected to communicate with several Cisco MSE services at a time. The client has to be built with the mindset that it will be communicating with external services that we do not have direct control of. Consequently we will have to handle external errors and unexpected behaviour without shutting the system down. 
+This section aims to build a client that is capable of communicating with several MSE services and the database server. As mentioned previously in \cref{subsec:system_hierarchy}, it is expected to communicate with several Cisco MSE services at a time. The client has to be built with the mindset that it will be communicating with external services that we do not have direct control of. Consequently we will have to handle external errors and unexpected behaviour without shutting the system down. 
 
 The client has to afford the flexibility of maintaining a list of connected services during runtime, such that a new Cisco MSE service can be added and removed without requiring a restart. We call this list the \emph{fetch list}. Furthermore, we wish to impose the requirement that an MSE service has to be online and responsive when added to the list in order to avoid faults caused by erroneous input.
 
-In this initial design and implementation of the client we do not wish to focus on security nor efficiency as they add another layer of complexity. Hence, certain security and efficiency-related aspects have been omitted in favour of robustness and flexibility. In particular, handling sensitive data such as IP addresses and passwords is something that has to be reconsidered in the future. The dimension of robustness is a measurement of how resilient a program is to erroneous input whereas the aspect of flexibility translates to the degree a program can adapt to changes. For this specific program, flexibility manifests itself in being able to handle an external service's sporadic behaviour during runtime and being capable of handling additional external MSE services during runtime.
+In this initial design and implementation of the client we do not wish to focus on security nor efficiency as they add another layer of complexity. Hence, certain security and efficiency-related aspects have been omitted in favour of robustness and flexibility. In particular, handling sensitive data such as IP addresses and passwords is something that has to be reconsidered in the future. %The dimension of robustness is a measurement of how resilient a program is to erroneous input whereas the aspect of flexibility translates to the degree a program can adapt to changes. For this specific program, flexibility manifests itself in being able to handle an external service's sporadic behaviour during runtime and being capable of handling additional external MSE services during runtime.
 
 \subsection*{Creating robustness}
-In order to make a robust client we have to make sure that it can handle erroneous input and external errors when connecting to MSE services. This is largely handled by the $try...catch$ keywords in Java, which allow the executing program to catch exceptions during runtime and execute code according to the exception without exiting. In particular, a common exception type when working with networking is the $IOException$, which is a general term for the group of exceptions that can be encountered when performing IO-operations such as connecting to an IP address. There are several different exceptions that can be thrown when sending a request to an MSE service, depending on the state of the service. Consequently we use $try... catch(IOException)$ when performing networking requests, as resulting exceptions have to be handled in the same way no matter the subtype.
+In order to make a robust client we have to make sure that it can handle erroneous input and external errors when connecting to MSE services. This is largely handled by the $try...catch$ keywords in Java, which allow the executing program to catch exceptions during runtime and execute code according to the exception without exiting. In particular, a common exception type when working with networking is the $IOException$, which is a general term for the group of exceptions that can be encountered when performing I/O operations such as connecting to an IP address. There are several different exceptions that can be thrown when sending a request to an MSE service, depending on the state of the service. Consequently we use $try... catch(IOException)$ when performing networking requests, as resulting exceptions have to be handled in the same way no matter the subtype.
 
 \begin{lstlisting}[caption={Failed Connection snapshot},label={lst:failed_connect},language=inc_Java, mathescape]
 private void failedConnection(){
