--- a/2sprint/geo_locations.tex
+++ b/2sprint/geo_locations.tex
@@ -69,5 +69,5 @@ Typically decimal degrees are used when mapping on computers, whereas degrees mi
 It has been requested that the data we supply are in geographical coordinates.
 As the coordinate received from MSE are in feet relative to a fixed $(0;0)$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of $(0;0)$ and the angle of the map compared to longitude and latitude. 
 
-However, by using MSE it is not necessary to perform these calculations as it supports retrieving the positions in geographical coordinates. This requires at least three geographical coordinates on each map to be calculalted. By having geographical coordinates for at least three points, MSE can calculate the position of each device based on the relative coordinate in comparison to the inserted locations\cite{geo_cisco}. 
-MSE can output geographical coordinates in either the DMS of the DD format\cite{cisco_geo_type}. It has been stated from other astep groups there is a preference for the DD format, but since future applications may want the DMS or DDM format, further developers may want to consider implementing functionality to support the conversion.
+However, by using MSE it is not necessary to perform these calculations as it supports retrieving the positions in geographical coordinates. This requires at least three geographical coordinates on each map to be calculated. By having geographical coordinates for at least three points, MSE can calculate the position of each device based on the relative coordinate in comparison to the inserted locations\cite{geo_cisco}. 
+MSE can output geographical coordinates in either the DMS of the DD format\cite{cisco_geo_type}. It has been stated from other astep groups there is a preference for the DD format, but since future applications may want the DMS or DDM format, further developers may want to consider implementing functionality to support the conversion. \sfx{add to future work}
