--- a/experience/catch_up.tex
+++ b/experience/catch_up.tex
@@ -36,3 +36,5 @@ The Indoor (ID) Gitlab repository contains several Intellij projects. The projec
 \item Indoorlibrary is a static library containing much of the functionality used by our programs. We early on realised that the two systems are alike in many ways, and would have to afford the same functionality. As a consequence we decided to make a library to use for several projects, to avoid duplicate code. 
 \item IndoorCore contains the code for the client system. 
 \end{itemize} 
+
+\sfx{useful links to wiki and all that}
