--- a/3sprint/update_rest.tex
+++ b/3sprint/update_rest.tex
@@ -1,5 +1,5 @@
 \section{Restful Proxy Update}\label{sec:proxy_update1}
-We plan on implementing an update to the RESTful proxy server that is used to communicate with Aalborg University's MSE. The update is planned to remove a bug causing loss of data during conversion between different data formats. This section covers the motivation for the following changes in the update:
+We plan on implementing an update to the RESTful proxy server that is used to communicate with Aalborg University's MSE. This update is a consequence of MSE being updated to support geographic coordinates. The update is planned to remove a bug causing loss of data during conversion between different data formats. This section covers the motivation for the following changes in the update:
 
 \begin{itemize}
 \item Resolved loss of data during conversion
