--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -12,7 +12,7 @@ In addition to the super-group meetings there are being held smaller meetings, w
 We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
  
 \paragraph{Application Meetings}
-At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application using indoor positioning are making a hotmap, and they only wish for geographical coordinates and the confidence factor for each device.\ofx{someone can confirm this?}
+At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application using indoor positioning are making a Heatmap, and they only wish for geographical coordinates and the confidence factor for each device.\ofx{someone can confirm this?}
 
 \paragraph{Database meetings}
 At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. At the initial meeting with the database groups it was requested by them that all locations are to be stored as geographical coordinates, rather than relative.% We told them our initial ideas for what we would like to store, these requirements have since then changed, see \cref{sec:data_store}, and these have been passed on to the database groups through GitLab.
@@ -21,4 +21,4 @@ At meetings with the database groups there have been talked about what data we w
 Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco whereas the other group would get started on the indoor API. There have been a continuous communication between our two groups to keep track of progress and difficulties. 
 
 \paragraph{UM meetings}
-There was held several meetings with the UM group concerning HTTP vs HTTPS and how to incorporate it with our RESTFUL service. Initially we and the UM group were not able to setup the HTTPS correctly in the estimated time, when the problems was raises over slack aSTEP, Alexander Krog from HotMaps apps said he had experience with this and knows how to do it, Alexander were then giving a task to work on how to change the previous code so aSTEP can run over HTTPS. The next task is to create the keystore to HTTPS, in this we need a third party to ensure that when client connect to our RESTFUL services it is not a scam or being emulated by a a third party. We initialized to on the task of doing this, but realize the we do not a access to the server, so the task was forwarded to the group in charge of the aSTEP service server. 
+There was held several meetings with the UM group concerning HTTP vs HTTPS and how to incorporate it with our RESTFUL service. Initially we and the UM group were not able to setup the HTTPS correctly in the estimated time, when the problems was raises over slack aSTEP, Alexander Krog from Heatmap application said he had experience with this and knows how to do it, Alexander were then giving a task to work on how to change the previous code so aSTEP can run over HTTPS. The next task is to create the keystore to HTTPS, in this we need a third party to ensure that when client connect to our RESTFUL services it is not a scam or being emulated by a a third party. We initialized to on the task of doing this, but realize the we do not a access to the server, so the task was forwarded to the group in charge of the aSTEP service server. 
