--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -1,7 +1,7 @@
 \chapter{Sprint 1}
-This chapter covers the work for the first sprint in the aStep project. Seeing as the project is new, the initial focus will be to research technologies and attempt an early design for the system. As such, the goals for this sprint is to explore and possibly select technologies, as well as develop an initial design of the structure of the indoor positioning service. 
+This chapter covers the work for the first sprint in the aSTEP project. Seeing as the project is new, the initial focus will be to research technologies and attempt an early design for the system. As such, the goals for this sprint is to explore and possibly select technologies, as well as develop an initial design of the structure of the indoor positioning service. 
 
-The following chapters describe the initial steps to integrate indoor positioning into aStep.
+The following chapters describe the initial steps to integrate indoor positioning into aSTEP.
 
 \input{1sprint/cisco.tex}
 \input{1sprint/permission}
