--- a/bib.bib
+++ b/bib.bib
@@ -387,12 +387,14 @@
     note = {Accessed 12-5-2016},
     url ={http://developer.android.com/reference/android/location/Location.html#getAccuracy%28%29}
 }
+
 @MISC{cisco_acc,
 	author = {Cisco},
 	title = {MSE Security},
 	note = {Accessed 12-5-2016},
 	url ={http://www.cisco.com/c/en/us/support/docs/wireless/context-aware-software/110836-cas-faq.html}
 }
+
 @book{aa_book,
   author    = {Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest and Clifford Stein}, 
   title     = {Introduction to Algorithms},
@@ -402,15 +404,25 @@
   note      = {Page 308},
   isbn      = {978-0-26253305-8 }
 }
+
 @MISC{dokumentation_astep,
 	author = {SW608F16},
 	title = {Dokumentation},
 	note = {Accessed 20-5-2016},
 	url ={http://daisy-git.cs.aau.dk/Yang/astep/wikis/Dokumentaion}
 }
+
 @MISC{restful_in_java,
 	author = {Oracle Corporation},
 	title = {RESTful Web Services in Java},
 	note = {Accessed 16-5-2016},
 	url ={https://jersey.java.net/}
 }
+
+@MISC{slack,
+	author = {Slack},
+	title = {A messaging app for teams who put robots on Mars!!},
+	note = {Accessed 17-5-2016},
+	url ={https://slack.com/}
+}
+
