--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -4,7 +4,7 @@ In this section there will be described some of the meeting held with other grou
 \subsection{Super-group Meetings}\label{subsec:supergroup_meetings}
 In the aSTEP project ten groups are working together to make one large system with multiple applications. To keep track of all groups progress and their needs i regard to other parts of the system, being developed by other groups, there are being held weekly meetings with one representative from each group.
 
-At the large meetings our representative have been responsible for taking notes after which he writes a summary and makes it available for everyone. During these meetings there is a live chat on Slack such that everyone in the project can see what happens and come with input if there are something they wish to be taken up. In mid March it was decided at a meeting that there should be a mid-sprint meeting, where the goals for the sprint was presented and the progress thereof evaluated.
+At the large meetings our representative have been responsible for taking notes after which he writes a summary and makes it available for everyone. During these meetings there is a live chat on Slack \cite{slack}such that everyone in the project can see what happens and come with input if there are something they wish to be taken up. In mid March it was decided at a meeting that there should be a mid-sprint meeting, where the goals for the sprint was presented and the progress thereof evaluated.
 
 \subsection{Small Meetings}\label{subsec:small_meetings}
 In addition to the super-group meetings there are being held smaller meetings, where only a few groups participate, in order to specify needs, present ideas and possible solutions.
@@ -21,4 +21,4 @@ At meetings with the database groups there have been talked about what data we w
 Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco whereas the other group would get started on the indoor API. There have been a continuous communication between our two groups to keep track of progress and difficulties. 
 
 \paragraph{UM meetings}
-There was held several meetings with the UM group concerning HTTP vs HTTPS and how to incorporate it with our RESTFUL service. Initially we and the UM group were not able to setup the HTTPS correctly in the estimated time, when the problems was raises over slack aSTEP, Alexander Krog from HotMaps apps said he had experience with this and knows how to do it, Alexander were then giving a task to work on how to change the previous code so aSTEP can run over HTTPS. The next task is to create the keystore to HTTPS, in this we need a third party to ensure that when client connect to our RESTFUL services it is not a scam or being emulated by a a third party. We initialized to on the task of doing this, but realize the we do not a access to the server, so the task was forwarded to the group in charge of the aSTEP service server. 
+There was held several meetings with the UM group concerning HTTP vs HTTPS and how to incorporate it with our RESTFUL service. Initially we and the UM group were not able to setup the HTTPS correctly in the estimated time, when the problems was raises over Slack aSTEP, Alexander Krog from HotMaps apps said he had experience with this and knows how to do it, Alexander were then giving a task to work on how to change the previous code so aSTEP can run over HTTPS. The next task is to create the keystore to HTTPS, in this we need a third party to ensure that when client connect to our RESTFUL services it is not a scam or being emulated by a a third party. We initialized to on the task of doing this, but realize the we do not a access to the server, so the task was forwarded to the group in charge of the aSTEP service server. 
