coordinates in future work and fixed some fixme

--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -12,7 +12,7 @@ In addition to the super-group meetings there are being held smaller meetings, w
 We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
  
 \paragraph{Application Meetings}
-At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application using indoor positioning are making a heatmap, and they only wish for geographical coordinates and the confidence factor for each device.\ofx{someone can confirm this?}
+At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application using indoor positioning are making a heatmap, and they wish for geographical coordinates in the decimal degree format, a unique identifier and the confidence factor for each device.
 
 \paragraph{Database meetings}
 At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. At the initial meeting with the database groups it was requested by them that all locations are to be stored as geographical coordinates, rather than relative.% We told them our initial ideas for what we would like to store, these requirements have since then changed, see \cref{sec:data_store}, and these have been passed on to the database groups through GitLab.
