--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -35,7 +35,7 @@ Triangulation works by using three or more access-points to receive the signal f
 \end{figure}
 
 \subsubsection*{Angle of Arrival}
-This category consists of approaches where the angle of the received signal is measured. The angle can be obtained by either having several antennas or being able to rotate a single antenna to find the direction at which the RSSI is strongest. With multiple angles of arrival it is possible to calculate a position based on the intersection of the euclidean vectors going through the antennas. \sfx{Same source as other places, need to cite though}
+This category consists of approaches where the angle of the received signal is measured. The angle can be obtained by either having several antennas or being able to rotate a single antenna to find the direction at which the RSSI is strongest. With multiple angles of arrival it is possible to calculate a position based on the intersection of the euclidean vectors going through the antennas \cite{tracking_approaches}. 
 
 \subsubsection*{Location Patterning}
 The location patterning category sets out to measure the connectivity patterns for a set of locations. The most common approach for this category is called WI-FI Fingerprinting. This method has an intial calibration phase, where the RSSI pattern for each point of interest is measured and stored in the system. When the signal strength from a device is received, it is then compared to the previously measured RSSI patterns. The point of interest with the most similar pattern is determined to be the position of the device. This means that a system using fingerprinting can not determine the exact position of a device, but rather calculates a probability that the device is located at a given point of interest \cite{fingerprint1}.
@@ -68,7 +68,7 @@ Redpin is an open source indoor positioning system that uses location patterning
 
 Google have also developed their own positioning system. They have made indoor navigation and tracking possible trough their Indoor Maps project \cite{IPSoverGPS}, which lets users map a building by uploading a floor plan of said building. After the floor plan has been accepted, the system will request information about the location of the WI-FI access points in the building \cite{googleindoormaps}. A user can then see their own location on Google maps at any time. Google have been very secretive in regards to what tracking approaches they use, as such it is difficult to evaluate the technology.
 
-Cisco have developed a location-aware wireless network system, Cisco Mobility Services Engine (MSE), which utilises WI-FI triangulation \cite{CiscoTri}. MSE makes it possible to track the location of up to 25000\sfx{double check this number} network devices at once, regardless of whether the devices are connected to the network. Using the RSSI data from the access points, the MSE controller calculates distance and compares time of arrival to perform a triangulation and obtain a position \cite{ciscoMSE}.
+Cisco have developed a location-aware wireless network system, Cisco Mobility Services Engine (MSE), which utilises WI-FI triangulation \cite{CiscoTri}. MSE makes it possible to track the location of up to 25000 network devices at once, regardless of whether the devices are connected to the network \cite{cisco25000}. Using the RSSI data from the access points, the MSE controller calculates distance and compares time of arrival to perform a triangulation and obtain a position \cite{ciscoMSE}.
 The building is modelled by the use of an outline of the floor plan. The image is converted to a coordinate system that is placed on top of the model, which is then supplied with the positions of the static access points in the building. With this information it is possible to get the relative position of any device in relation to the origin of the coordinate system. It is these relative positions that are used to track wireless devices. MSE also has the capability of calculating geographic coordinates.
 Cisco claim to have a location precision of less than 1 meter, refresh rate of 10-120 updates per minute and a system latency of 2-4 seconds \cite{dimensions}. 
 
