--- a/1sprint/cisco_usage.tex
+++ b/1sprint/cisco_usage.tex
@@ -47,4 +47,4 @@ Private static Client ObfuscateMacAddress(Client singleClient) {
 \end{lstlisting}
 
 \subsection{System hierarchy}\label{subsec:system_hierarchy}
-With this code it is possible to create an intermediate service for the Cisco MSE RESTful service, that intercepts the response and obfuscates certain information. To use this service, a client needs to know the IP address and a login for the intermediate service. To automate the requests and create a flow of data from the MSE systems to the aSTEP database, we will have to build and implement a client that fetches data at an interval. The scope of the project is beyond Aalborg University, and as such the project will need to support more then a single MSE system. A model can be seen in Future Work chapter \ref{Cha:Future_Work}.\sfx{move to appendix} \sfx{kig igen simon}
+With this code it is possible to create an intermediate service for the Cisco MSE RESTful service, that intercepts the response and obfuscates certain information. To use this service, a client needs to know the IP address and a login for the intermediate service. To automate the requests and create a flow of data from the MSE systems to the aSTEP database, we will have to build and implement a client that fetches data at an interval. The scope of the project is beyond Aalborg University, and as such the project will need to support more then a single MSE system. A model can be seen in Future Work chapter \ref{Cha:Future_Work}.\sfx{move to appendix}
