--- a/2sprint/geo_locations.tex
+++ b/2sprint/geo_locations.tex
@@ -8,7 +8,6 @@ There are three formats to denote geographical coordinates: degrees minutes seco
 
 Typically decimal degrees are used when mapping on computers, whereas degrees minutes seconds and degrees decimal minutes are used for marking maps and by electronic navigation equipment respectively\cite{geo_types}. The listing below shows the conversion between the three different types of geographical coordinates. All the calculations are based on equivalent values and the results of each conversion should therefore be the input of another type\cite{geo_converter}.
 
-
 \begin{itemize}
 	\item \textbf{Degrees minutes seconds on input 10\degree 12' 30''}
 	\begin{itemize}
@@ -69,5 +68,5 @@ Typically decimal degrees are used when mapping on computers, whereas degrees mi
 It has been requested that the data we supply are in geographical coordinates.
 As the coordinate received from MSE are in feet relative to a fixed $(0;0)$ point, it would be possible to calculate the geographical location of a device by knowing the coordinate of $(0;0)$ and the angle of the map compared to longitude and latitude. 
 
-However, by using MSE it is not necessary to perform these calculations as it supports retrieving the positions in geographical coordinates. This requires at least three geographical coordinates on each map to be calculated. By having geographical coordinates for at least three points, MSE can calculate the position of each device based on the relative coordinate in comparison to the inserted locations\cite{geo_cisco}. 
-MSE can output geographical coordinates in either the DMS of the DD format\cite{cisco_geo_type}. It has been stated from other aSTEP groups there is a preference for the DD format, but since future applications may want the DMS or DDM format, further developers may want to consider implementing functionality to support the conversion. \sfx{add to future work}
+However, by using MSE it is not necessary to perform these calculations as it is possible to set up Cisco to provide positions in geographical coordinates. This requires at least three geographical coordinates on each map to be calculated. By having geographical coordinates for at least three points, MSE can calculate the position of each device based on the relative coordinate in comparison to the inserted locations\cite{geo_cisco}. 
+MSE can output geographical coordinates in either the DMS or the DD format\cite{cisco_geo_type}. It has been stated from other aSTEP groups there is a preference for the DD format, but since future applications may want the DMS or DDM format, further developers may want to consider implementing functionality to support the conversion.
