--- a/bib.bib
+++ b/bib.bib
@@ -425,4 +425,9 @@
 	note = {Accessed 17-5-2016},
 	url ={https://slack.com/}
 }
-
+@MISC{cisco25000,
+	author = {Cisco},
+	title = {Cisco Mobility Services Engine},
+	note = {Accessed 18-5-2016},
+	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.pdf}
+}
